--- a/src/routes/home/style.css
+++ b/src/routes/home/style.css
@@ -1,6 +1,6 @@
 .home-page {
   width: 100%;
-  height: 100vh;
+  height: fit-content;
   background: #233c67;
   text-align: center;
   padding: 5px;
@@ -13,7 +13,7 @@
 .home-container {
   width: 95%;
   margin: auto;
-  margin-top: 50px;
+  margin-top: 30px;
 }
 .home-container img {
   display: block;
@@ -24,11 +24,11 @@
 .home-container h3 {
   color: #f1ca61;
   margin-bottom: 20px;
-  font-size: 2rem;
+  font-size: 1.6rem;
 }
 .home-container p {
   color: #ffffef;
-  font-size: 1.5rem;
+  font-size: 1.1rem;
   margin-bottom: 30px;
 }
 .home-container button {
@@ -45,8 +45,8 @@
     rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
   margin-bottom: 20px;
   color: #ffffef;
-  border-radius: 25px;
-  padding: 20px 0;
+  border-radius: 20px;
+  padding: 15px 0;
   transition: all 1s ease-in-out;
 }
 
