--- a/src/components/nav/style.css
+++ b/src/components/nav/style.css
@@ -1,3 +1,18 @@
 nav {
   position: fixed;
+  padding: 10px;
+  display: grid;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(10px);
+  justify-items: center;
+  grid-template-columns: 3fr 1fr;
+}
+nav h1 {
+  font-size: 1.3rem;
+  color: #ffffef;
+}
+nav h6 {
+  color: #ba1003;
+  font-size: 1.2rem;
 }
