--- a/src/components/completeQuiz/style.css
+++ b/src/components/completeQuiz/style.css
@@ -9,15 +9,21 @@
   color: #ffffef;
   border: none;
   font-size: 1rem;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
+    rgba(0, 0, 0, 0.22) 0px 15px 12px;
   padding: 15px;
   border-radius: 10px;
   margin: 20px 0;
+  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
+    rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
+    rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px,
+    rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
+    rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
 }
 .share {
-  margin: 10px 0;
+  margin-bottom: 20px;
 }
 .share small {
-  margin-top: 10px;
   display: block;
   margin-bottom: 5px;
 }
@@ -27,6 +33,11 @@
   border: 2px solid #002136;
 }
 .stats-cont {
+  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
+    rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
+    rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px,
+    rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
+    rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
   background: #002136;
   color: #ffffef;
   padding: 0.2px;
@@ -67,6 +78,8 @@
   border-radius: 15px;
   color: #002136;
   padding: 0.2px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+    rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
 .form p {
   margin: 60px 0;
