--- a/src/components/quiz/style.css
+++ b/src/components/quiz/style.css
@@ -100,8 +100,8 @@
   padding: 17px 0;
 }
 .correct {
-  border: 2px solid #00ff00 !important;
+  border: 4px solid #00ff00 !important;
 }
 .wrong {
-  border: 2px solid #ff0f0f !important;
+  border: 4px solid #ff0f0f;
 }
