--- a/src/components/quiz/style.css
+++ b/src/components/quiz/style.css
@@ -11,10 +11,14 @@
   border-bottom-left-radius: 100px;
   border-bottom-right-radius: 100px;
 }
+.sect-qs {
+  height: fit-content;
+}
 .q-sect {
   background-color: #ffffef;
   color: #002136;
   padding: 5px;
+  height: fit-content;
   top: 32%;
   position: relative;
   border-radius: 10px;
@@ -76,6 +80,7 @@
 }
 .q-cont {
   margin: 20px 0;
+  text-transform: capitalize;
 }
 .answer-sect {
   position: relative;
@@ -87,6 +92,7 @@
   grid-gap: 10px;
 }
 .options {
+  text-transform: capitalize;
   width: 95%;
   margin: auto;
   padding: 15px 0;
