--- a/src/components/quiz/style.css
+++ b/src/components/quiz/style.css
@@ -11,17 +11,16 @@
   border-bottom-left-radius: 100px;
   border-bottom-right-radius: 100px;
 }
-.sect-qs {
-  height: fit-content;
-}
+
 .q-sect {
   background-color: #ffffef;
   color: #002136;
   padding: 5px;
+  width: 98%;
+  margin: auto;
   height: fit-content;
-  top: 32%;
-  position: relative;
-  border-radius: 10px;
+  margin-top: -150px;
+  border-radius: 15px;
 }
 .grid {
   display: grid;
@@ -29,10 +28,10 @@
   margin-bottom: 15px;
   margin-top: 20px;
 }
-.sect-1 .q-count {
+.q-count {
   margin: 6px 0;
 }
-.sect-1 .q-count h2 {
+.q-count h2 {
   color: #002136;
   font-size: 1.5rem;
   width: 20%;
@@ -84,7 +83,7 @@
 }
 .answer-sect {
   position: relative;
-  margin-top: 100px;
+  margin-top: 30px;
   margin-bottom: 20px;
 }
 .options-cont {
@@ -95,6 +94,7 @@
   text-transform: capitalize;
   width: 95%;
   margin: auto;
+  position: relative;
   padding: 15px 0;
   color: #002136;
   font-size: 1.2rem;
