--- a/src/components/completeQuiz/style.css
+++ b/src/components/completeQuiz/style.css
@@ -21,7 +21,7 @@
     rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
 }
 .share {
-  margin-bottom:40px;
+  margin-bottom: 40px;
 }
 .share small {
   display: block;
@@ -55,6 +55,7 @@
 .stats-cont h3 {
   margin: 20px 0;
 }
+
 .stats-cont h3 span {
   color: #f1ca61;
   font-size: 1.5rem;
@@ -108,4 +109,21 @@
   background: #ffffef;
   color: #002136;
   border: 2px solid #002136;
+}
+.level {
+  margin-bottom: 10px;
+  font-size: 18px !important;
+  text-transform: uppercase;
+}
+.level span {
+  padding: 5px 15px;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
+    rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
+    rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px,
+    rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
+    rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+  font-size: 18px !important;
+  background-color: #f1ca61;
+  color: #ffffef !important;
 }
